# agentic-tau-airline

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  environment.yml  pyproject.toml
configs/: grpo_qwen3_airline.yaml  paths.yaml  rollout.yaml  tau2_agent_loop.yaml
configs/reward/: reward.yaml
configs/usersim/: usersim.yaml
configs/verl/: grpo_qwen3_airline.yaml  tau2_agent_loop.yaml
docs/: fa_trainer_oom_microbatch_leak.md  fully_async_disaggregated_2gpu.md  gdpo_decoupled_advantage.md  grpo_flat_curve_and_areal_recipe.md  grpo_training_starting_config.md  grpo_zero_reward_diagnosis.md  local_user_sim_migration_interview.md  related_work_tau_rl.md  rollout_hardening_usersim.md  sft_fused_kernels.md  tau3_airline_qwen3_verl_grpo_plan.md  usersim_rootcause_deepseek_fix.md  verl_2gpu_engine_offload_and_async.md
notes/: airline_understanding.md
scripts/: demo_rollout.py  download_qwen3_8b.sh  eval_modes.py  eval_modes_vllm.py  install_tau2.sh  sanity_rollout_orchestrator.py  understand_airline.py
scripts/data/: build_parquet.sh  build_sft_parquet.sh
scripts/eval/: run_base_rollout.sh  run_eval.sh
scripts/setup/: download_qwen3_6_35b_fp8.sh  download_qwen3_8b.sh  install.sh  serve_usersim.sh  usersim_loadtest.py  verify_local_models.py
scripts/train/: resume_grpo.sh  run_grpo.sh  run_grpo_areal_probe.sh  run_grpo_fully_async.sh  run_grpo_smoke.sh  run_grpo_then_hold.sh  run_sft.sh  run_sft_then_hold.sh
tests/: test_agent_loop.py  test_conversion.py  test_reward.py  test_sft_keepthink.py  test_splits.py  test_tau2_session.py
(+33 files in other folders)
